# diff-gaussian-rasterization

./: .gitignore  CMakeLists.txt  ext.cpp  setup.py
cpu_rasterizer/: auxiliary.c  auxiliary.h  config.h  forward.c  forward.h  rasterizer.h  rasterizer_impl.c
